fixed time card overflow issue

--- a/scct/web/css/timecards.css
+++ b/scct/web/css/timecards.css
@@ -104,7 +104,8 @@ div[id^=modalContent] #loading {
 #GridViewForTimeCard{
 	width:100%;
 	max-height:58vh;
-	overflow:auto;
+	overflow-y:auto;
+	overflow-x: hidden;
 }
 /*timeCard view page*/
 .timecard-view table{
